# MXGame

./: .gitignore  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  mxgame.pc.in
doc/: package_diagram.dia
mxgame/application/: application.hpp
mxgame/core/: types.hpp
mxgame/exception/: application_exception.hpp  ogre_initialize_resources_exception.hpp  ogre_setup_render_system_exception.hpp  ogre_setup_scene_exception.hpp
mxgame/graphic/: ogre_bullet_debug_drawer.cpp  ogre_bullet_debug_drawer.hpp
mxgame/physics/: bullet_simulation.cpp  bullet_simulation.hpp  ogre_bullet_motion_state.hpp
mxgame/system/: boost_timer.cpp  boost_timer.hpp
src/: Makefile.am
src/mxgame/: Makefile.am
src/mxgame/application/: Makefile.am  application.cpp  application.h  application.hpp  application_exception.hpp
src/mxgame/application/exception/: exception.hpp
src/mxgame/boost/system/: Makefile.am
src/mxgame/boost/system/time/: Makefile.am  timer.cpp  timer.hpp
src/mxgame/bullet/: Makefile.am  rigid_body_builder.hpp  simulation.cpp  simulation.hpp  simulation_listener.hpp
src/mxgame/core/: exception.hpp
src/mxgame/core/ogre/: initialize_resources_exception.hpp  setup_render_system_exception.hpp  setup_render_window_exception.hpp  setup_resources_exception.hpp  setup_root_exception.hpp  setup_scene_exception.hpp
src/mxgame/exception/: application_exception.hpp  exception.hpp  ogre_setup_render_window_exception.hpp  ogre_setup_resources_exception.hpp  ogre_setup_root_exception.hpp  system_exception.hpp
src/mxgame/graphic/: Makefile.am  ogre_default_scene_node_builder.hpp  ogre_scene_node_builder.hpp
src/mxgame/ogre/: Makefile.am  default_scene_node_builder.hpp  scene_node_builder.hpp
src/mxgame/ogre/bullet/: Makefile.am  default_rigid_body_builder.hpp  motion_state.hpp
src/mxgame/ogre/bullet/debug/: Makefile.am  drawer.cpp  drawer.hpp
src/mxgame/ogre/bullet/util/: converter.hpp
src/mxgame/ogre/core/: initialize_resources_exception.hpp  setup_render_system_exception.hpp  setup_render_window_exception.hpp  setup_resources_exception.hpp  setup_root_exception.hpp  setup_scene_exception.hpp
src/mxgame/ogre/util/: converter.hpp
src/mxgame/physics/: Makefile.am  bullet_rigid_body_builder.hpp  bullet_simulation.cpp  bullet_simulation.hpp  bullet_simulation_listener.hpp  ogre_bullet_default_rigid_body_builder.hpp  ogre_bullet_motion_state.hpp
src/mxgame/system/: Makefile.am  clock.hpp  system_exception.hpp  system_timer.cpp  system_timer.hpp  timer.hpp
src/mxgame/system/time/: Makefile.am  boost_time.cpp  boost_timer.cpp  boost_timer.hpp  clock.cpp  clock.hpp  system_time.cpp  system_timer.cpp  system_timer.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
src/mxgame/system/window/: Makefile  Makefile.am  null_window.hpp  render_context.hpp  test.c  window.cpp  window.hpp  window_exception.hpp  window_listener.hpp
src/mxgame/system/window/exception/: window_exception.hpp
src/mxgame/system/window/gl/: render.c  window.h  x11_window.cpp  x11_window.hpp
src/mxgame/util/: disallow_copy_assign.hpp  ogre_bullet_util.hpp  util.hpp
src/mxgame/utils/: geometry.h  graphic.h
src/mxgame/window/: Makefile  test  window.h
src/mxgame/window/gl/: render.h  window.c
src/mxgame/window/linux/: window.c
test/: Makefile.am  application_test  application_test.cpp  system_test.cpp  system_window_test.cpp  time_test  time_test.cpp  util_test.cpp
